<resources>
    <string name="app_name" translatable="false">TFContest</string>

    //Common
    <string name="no_internet">No Internet connection</string>
    <string name="connected">Internet connection established</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>

    //Login Screen
    <string name="login">Login</string>
    <string name="restore_pass">Restore password</string>
    <string name="error_login">Wrong email / password</string>
    <string name="error_restore">Email not found</string>
    <string name="restore_sent">Instruction sent to\n%s</string>

    //Profile Screen
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="grade_year">Graduation year</string>
    <string name="university">University</string>
    <string name="education">Education</string>
    <string name="region">City</string>
    <string name="email">Email</string>
    <string name="contacts">Contact information</string>
    <string name="birthday">Birthday</string>
    <string name="name">Full name</string>
    <string name="login_hint">LOGIN</string>
    <string name="pass_hint">PASSWORD</string>
    <string name="profile_updated">Profile updated</string>
    <string name="company">Company</string>
    <string name="current_work">Current work</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="error_update_profile">Can\'t update profile</string>
    <string name="error_name_rus">Enter name in russian</string>
    <string name="error_name_full">Enter first and last names</string>
    <string name="error_phone">Correct format +71234567890</string>

    //Settings Screen
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="change_user">Change user</string>
    <string name="settings">Settings</string>
    <string name="logout_error">Logout Fail</string>

    //MyCourse Main Screen
    <string name="tests_progress" translatable="false">%d/%d</string>
    <string name="tests_percent" translatable="false">%d%%</string>
    <string name="my_course">My course</string>
    <string name="all_tests">ALL %d</string>
    <string name="all_tests_placeholder">ALL 0</string>
    <string name="test_tasks">Test tasks</string>
    <string name="tests_title">Tests</string>
    <string name="done">Done</string>
    <string name="points_title">Points</string>
    <string name="success_test_pass">Test passed successfully</string>
    <string name="error_test_failed">Test isn\'t passed</string>
    <string name="error_test_announce">Test has not opened yet</string>
    <string name="error_tests_not_found">No available tests found</string>
    <string name="error_load_test">Could not load test</string>

    //Contest Screen
    <string name="question_number">Question. %d/%d</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="test_started">Test started</string>
    <string name="error_submit_answer">Failed to submit answer. Try again!</string>
    <string name="error_cant_start_test">Could not start test!</string>
    <string name="test_finished_message">Answers sent for review.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="done_btn">Done</string>
</resources>
