<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/placeholder_user"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/name_layout"
                app:riv_border_color="#bdbdbd"
                app:riv_border_width="0.5dp"
                app:riv_corner_radius="50dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/name"
                app:errorEnabled="true"
                app:layout_constraintLeft_toRightOf="@id/iv_avatar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_name"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="textMultiLine"
                    android:maxLines="2"
                    android:textColor="@drawable/edittext_selector"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/birthday_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:hint="@string/birthday"
                app:layout_constraintLeft_toRightOf="@id/iv_avatar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="sans-serif"
                    android:textColor="@drawable/edittext_selector"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/contacts_divider"
                style="@style/HorizontalDivider"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/birthday_layout" />

            <TextView
                android:id="@+id/tv_contacts_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/contacts"
                android:drawablePadding="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/contacts"
                android:textColor="@drawable/edittext_selector"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contacts_divider" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_contacts_label">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:fontFamily="sans-serif"
                    android:inputType="textEmailAddress"
                    android:textColor="@drawable/edittext_selector"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/region_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/region"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="text"
                    android:textColor="@drawable/edittext_selector"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/education_divider"
                style="@style/HorizontalDivider"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/region_layout" />

            <TextView
                android:id="@+id/tv_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/education"
                android:drawablePadding="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/education"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/education_divider" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/university_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/university"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_education">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_university"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="textMultiLine"
                    android:maxLines="2"
                    android:textColor="@drawable/edittext_selector"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/university_grade_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/grade_year"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/university_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_university_grade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="sans-serif"
                    android:textColor="@drawable/edittext_selector"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/cancel_btn_bg"
                android:elevation="4dp"
                android:enabled="false"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.03"
                android:text="@string/cancel"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/university_grade_layout" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/save_btn_bg"
                android:elevation="4dp"
                android:enabled="false"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.03"
                android:text="@string/save"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/university_grade_layout" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.SwipeRefreshLayout>

